Moved Skill Classes to Dedicated Package
- Moved all skill-related classes into a discrete package